Head updated throughout site

--- a/src/cgm.html
+++ b/src/cgm.html
@@ -5,8 +5,24 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>ackee creative | CGM</title>
-    <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="ackee is the portfolio of me, Ed Stennett, a Winchester based designer" />
+    <link rel="canonical" href="http://ackeecreative.com/" />
+
+    <meta name="format-detection" content="telephone=no" />
+    <!--    <meta name="google-site-verification" content="" />-->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:description" content="ackee is the portfolio of me, Ed Stennett, a Winchester based designer" />
+    <meta name="twitter:site" content="@edstennett" />
+    <meta name="twitter:title" content="ackee | Winchester based designer" />
+    <meta name="twitter:image" content="https://images.pexels.com/photos/87646/horsehead-nebula-dark-nebula-constellation-orion-87646.jpeg?w=1260&h=750&auto=compress&cs=tinysrgb" />
+    <meta property="og:description" content="ackee is the portfolio of me, Ed Stennett, a Winchester based designer" />
+    <meta property="og:image" content="https://images.pexels.com/photos/87646/horsehead-nebula-dark-nebula-constellation-orion-87646.jpeg?w=1260&h=750&auto=compress&cs=tinysrgb" />
+    <meta property="og:locale" content="en_GB" />
+    <meta property="og:site_name" content="ackee" />
+    <meta property="og:title" content="ackee | Winchester based designer" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://ackeecreative.com/" />
 
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <link href="http://allfont.net/allfont.css?fonts=league-spartan" rel="stylesheet" type="text/css" />
@@ -133,7 +149,7 @@
     <section class="portfolio-image-block" style="background-image: url(../img/cgm-ipad-hero.jpg);">
         <h1 class="visuallyhidden">CGM website on an iPad</h1>
     </section>
-    
+
     <section class="portfolio-intro">
         <div class="container portfolio-block-height-small">
             <div class="five columns offset-by-one left-text-intro">
