--- a/src/work.html
+++ b/src/work.html
@@ -5,32 +5,48 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>ackee creative | work</title>
-    <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="ackee is the portfolio of me, Ed Stennett, a Winchester based designer" />
+    <link rel="canonical" href="http://ackeecreative.com/" />
+
+    <meta name="format-detection" content="telephone=no" />
+    <!--    <meta name="google-site-verification" content="" />-->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:description" content="ackee is the portfolio of me, Ed Stennett, a Winchester based designer" />
+    <meta name="twitter:site" content="@edstennett" />
+    <meta name="twitter:title" content="ackee | Winchester based designer" />
+    <meta name="twitter:image" content="https://images.pexels.com/photos/87646/horsehead-nebula-dark-nebula-constellation-orion-87646.jpeg?w=1260&h=750&auto=compress&cs=tinysrgb" />
+    <meta property="og:description" content="ackee is the portfolio of me, Ed Stennett, a Winchester based designer" />
+    <meta property="og:image" content="https://images.pexels.com/photos/87646/horsehead-nebula-dark-nebula-constellation-orion-87646.jpeg?w=1260&h=750&auto=compress&cs=tinysrgb" />
+    <meta property="og:locale" content="en_GB" />
+    <meta property="og:site_name" content="ackee" />
+    <meta property="og:title" content="ackee | Winchester based designer" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://ackeecreative.com/" />
 
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <link href="http://allfont.net/allfont.css?fonts=league-spartan" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Biryani" rel="stylesheet">
-        <link rel="shortcut icon" href="/favicon.ico">
-	<link rel="icon" sizes="16x16 32x32 64x64" href="/favicon.ico">
-	<link rel="icon" type="image/png" sizes="196x196" href="/favicon-192.png">
-	<link rel="icon" type="image/png" sizes="160x160" href="/favicon-160.png">
-	<link rel="icon" type="image/png" sizes="96x96" href="/favicon-96.png">
-	<link rel="icon" type="image/png" sizes="64x64" href="/favicon-64.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
-	<link rel="apple-touch-icon" href="/favicon-57.png">
-	<link rel="apple-touch-icon" sizes="114x114" href="/favicon-114.png">
-	<link rel="apple-touch-icon" sizes="72x72" href="/favicon-72.png">
-	<link rel="apple-touch-icon" sizes="144x144" href="/favicon-144.png">
-	<link rel="apple-touch-icon" sizes="60x60" href="/favicon-60.png">
-	<link rel="apple-touch-icon" sizes="120x120" href="/favicon-120.png">
-	<link rel="apple-touch-icon" sizes="76x76" href="/favicon-76.png">
-	<link rel="apple-touch-icon" sizes="152x152" href="/favicon-152.png">
-	<link rel="apple-touch-icon" sizes="180x180" href="/favicon-180.png">
-	<meta name="msapplication-TileColor" content="#FFFFFF">
-	<meta name="msapplication-TileImage" content="/favicon-144.png">
-	<meta name="msapplication-config" content="/browserconfig.xml">
+    <link rel="shortcut icon" href="/favicon.ico">
+    <link rel="icon" sizes="16x16 32x32 64x64" href="/favicon.ico">
+    <link rel="icon" type="image/png" sizes="196x196" href="/favicon-192.png">
+    <link rel="icon" type="image/png" sizes="160x160" href="/favicon-160.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96.png">
+    <link rel="icon" type="image/png" sizes="64x64" href="/favicon-64.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
+    <link rel="apple-touch-icon" href="/favicon-57.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/favicon-114.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/favicon-72.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/favicon-144.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/favicon-60.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/favicon-120.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/favicon-76.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/favicon-152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon-180.png">
+    <meta name="msapplication-TileColor" content="#FFFFFF">
+    <meta name="msapplication-TileImage" content="/favicon-144.png">
+    <meta name="msapplication-config" content="/browserconfig.xml">
 
     <link rel="stylesheet" href="./css/main.css">
 </head>
@@ -73,7 +89,7 @@
             <figure class="item image-three">
                 <h1 class="text-center white-text intro">James Falconer</h1>
             </figure>
-            
+
             <figure class="item image-four">
                 <h1 class="text-center white-text intro">ackee</h1>
             </figure>
@@ -90,37 +106,45 @@
     <section>
         <div class="container fade-out">
             <div class="six-no-padding columns image-blur">
-            <figure><a href="uwork.html">
-                <span class="caption"> <h3>uWork</h3>
+                <figure>
+                    <a href="uwork.html">
+                        <span class="caption"> <h3>uWork</h3>
                     <hr class="hr-full-width">
                     <p>Design   |   Branding   |   UX   |   UI</p></span>
-                <img src="img/uwork-hero.png" class="img-responsive" alt="uwork logo on green background">
-            </a></figure>
-        </div>
-        <div class="six-no-padding columns image-blur">
-            <figure><a href="ackee.html">
-                <span class="caption"> <h3>ackee</h3>
+                        <img src="img/uwork-hero.png" class="img-responsive" alt="uwork logo on green background">
+                    </a>
+                </figure>
+            </div>
+            <div class="six-no-padding columns image-blur">
+                <figure>
+                    <a href="ackee.html">
+                        <span class="caption"> <h3>ackee</h3>
                     <hr class="hr-full-width">
                     <p>Web Design   |   Branding</p></span>
-                <img src="img/ackee-hero.jpg" class="img-responsive" alt="ackee logo on dark background">
-            </a></figure>
-        </div>
-        <div class="six-no-padding columns image-blur">
-            <figure><a href="jamesfalconer.html">
-                <span class="caption"> <h3>James Falconer</h3>
+                        <img src="img/ackee-hero.jpg" class="img-responsive" alt="ackee logo on dark background">
+                    </a>
+                </figure>
+            </div>
+            <div class="six-no-padding columns image-blur">
+                <figure>
+                    <a href="jamesfalconer.html">
+                        <span class="caption"> <h3>James Falconer</h3>
                     <hr class="hr-full-width">
                     <p>Web Design</p></span>
-                <img src="img/jf-hero.jpg" class="img-responsive" alt="dark image from James Falconer's site with a lightbulb">
-            </a></figure>
-        </div>
-        <div class="six-no-padding columns image-blur">
-            <figure><a href="cgm.html">
-                <span class="caption"> <h3>CGM</h3>
+                        <img src="img/jf-hero.jpg" class="img-responsive" alt="dark image from James Falconer's site with a lightbulb">
+                    </a>
+                </figure>
+            </div>
+            <div class="six-no-padding columns image-blur">
+                <figure>
+                    <a href="cgm.html">
+                        <span class="caption"> <h3>CGM</h3>
                     <hr class="hr-full-width">
                     <p> Web Design   |   Branding</p></span>
-                <img src="img/cgm-ipad.jpg" class="img-responsive" alt="ipad being used showing cgm site">
-            </a></figure>
-        </div>
+                        <img src="img/cgm-ipad.jpg" class="img-responsive" alt="ipad being used showing cgm site">
+                    </a>
+                </figure>
+            </div>
             <svg width="100%" height="10px" xmlns="http://www.w3.org/2000/svg">
             <filter id="blur1">
                 <feGaussianBlur stdDeviation="3"/>
@@ -176,7 +200,7 @@
     </section>
 
     <div class="hidden" id="particles-js"></div>
-    
+
     <footer class="global-footer">
         <div class="container">
             <div class="one column footer-padding">
