--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <link rel="canonical" href="http://ackeecreative.com/" />
 
     <meta name="format-detection" content="telephone=no" />
-<!--    <meta name="google-site-verification" content="" />-->
+    <!--    <meta name="google-site-verification" content="" />-->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:description" content="ackee is the portfolio of me, Ed Stennett, a Winchester based designer" />
     <meta name="twitter:site" content="@edstennett" />
@@ -50,13 +50,6 @@
     <meta name="msapplication-config" content="/browserconfig.xml">
 
     <link rel="stylesheet" href="./css/main.css">
-    <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
-    <script>
-        window.jQuery || document.write('<script src="/src/js/vendor/jquery-1.12.0.min.js"><\/script>')
-    </script>
-    <script src="./js/plugins.js"></script>
-    <script src="./js/main.js"></script>
-    <script src="./js/modernizr-2.8.3.min.js"></script>
 </head>
 
 <body>
@@ -217,6 +210,34 @@
 
 
     <!-- scripts -->
+
+    <script src="https://code.jquery.com/jquery-1.12.0.min.js">
+        function preloadFunc() {
+            alert("PreLoad");
+        }
+        window.onpaint = preloadFunc();
+    </script>
+    <script>
+        window.jQuery || document.write('<script src="/src/js/vendor/jquery-1.12.0.min.js"><\/script>')
+    </script>
+    <script src="./js/plugins.js">
+        function preloadFunc() {
+            alert("PreLoad");
+        }
+        window.onpaint = preloadFunc();
+    </script>
+    <script src="./js/main.js">
+        function preloadFunc() {
+            alert("PreLoad");
+        }
+        window.onpaint = preloadFunc();
+    </script>
+    <script src="./js/modernizr-2.8.3.min.js">
+        function preloadFunc() {
+            alert("PreLoad");
+        }
+        window.onpaint = preloadFunc();
+    </script>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             Typed.new('.element', {
