MAJOR fix to text blocks, removing min height so they are now responsive, caused by weird float: left on column class

--- a/src/about.html
+++ b/src/about.html
@@ -102,11 +102,11 @@
 
     <section class="grey-text-block">
         <div class="container text-block">
-            <div class="six columns left-text-intro">
+            <div class="six columns left-text-intro inline-block">
                 <h3 class="fade-out">work</h3>
                 <p class="fade-out">Working as Technical Director, I am immersed in a creative world with notable work ranging from branding for global product launch events to user interface and user experience design for global apps. I have been lucky enough to work with some of largest companies in world.</p>
             </div>
-            <div class="six columns right-text-intro">
+            <div class="six columns right-text-intro inline-block">
                 <h3 class="invisible">clients</h3>
                 <p class="fade-out">Clients I have worked for include: Abbvie, Merck, Sanofi Genzyme, Novartis, Takeda, Sanofi, Shire, Allergan, BMS, Celgene, Daiitchi Sankyo, uWork, Ipsen, MedPharm, CGM, Jazz, Pierre Fabre, Terumo, Vertex</p>
             </div>
