--- a/src/uwork.html
+++ b/src/uwork.html
@@ -81,11 +81,11 @@
 
     <section class="portfolio-intro">
         <div class="container portfolio-block-height">
-            <div class="five columns offset-by-one left-text-intro">
+            <div class="five columns offset-by-one left-text-intro inline-block">
                 <h3 class="fade-out">project link</h3>
                 <a href="http://uwork.co.uk/" target="_blank" class="fade-out"><u>uwork.co.uk</u></a>
             </div>
-            <div class="five columns right-text-intro">
+            <div class="five columns right-text-intro u-pull-right inline-block">
                 <h3 class="fade-out">skills</h3>
                 <p class="fade-out">XD, Photoshop, Illustrator, InDesign, HTML, CSS, Javascript</p>
             </div>
@@ -138,14 +138,6 @@
             <div class="six columns left-text-intro">
                 <h3 class="fade-out">build</h3>
                 <p class="fade-out">A big focus on the uWork project is creating beautiful code, with emphasis on the A11Y Project, a community-driven effort to make web accessibility easier.</p>
-            </div>
-        </div>
-    </section>
-
-    <section class="portfolio-intro">
-        <div class="container portfolio-block-height-small">
-            <div class="five columns offset-by-one left-text-intro">
-                <a href="work.html"><u>&larr; back to portfolio</u></a>
             </div>
         </div>
     </section>
@@ -209,6 +201,7 @@
         </div>
 
     </section>
+
 
     <div class="hidden" id="particles-js"></div>
 
