--- a/src/jamesfalconer.html
+++ b/src/jamesfalconer.html
@@ -81,11 +81,11 @@
 
     <section class="portfolio-intro">
         <div class="container portfolio-block-height">
-            <div class="five columns offset-by-one left-text-intro">
+            <div class="five columns offset-by-one left-text-intro inline-block">
                 <h3 class="fade-out">project link</h3>
                 <a href="http://jamesfalconer.me/" target="_blank" class="fade-out"><u>jamesfalconer.me</u></a>
             </div>
-            <div class="five columns right-text-intro">
+            <div class="five columns right-text-intro u-pull-right inline-block">
                 <h3 class="fade-out">skills</h3>
                 <p class="fade-out">XD, Photoshop, Illustrator, HTML, CSS, Javascript</p>
             </div>
