--- a/src/cgm.html
+++ b/src/cgm.html
@@ -165,7 +165,28 @@
             <h1 class="quotation">“</h1>
             <h3 class="contact-heading">want to make<br> something beautiful?</h3>
 
+            <div class="container">
+                <form role="form" id="contact-form" method="post">
+                    <div class="form-group">
+                        <input type="text" required="required" />
+                        <label for="name" name="name" class="control-label">Name</label><i class="bar"></i>
+                    </div>
+                    <div class="form-group">
+                        <input type="email" required="required" />
+                        <label for="email" name="email" class="control-label">Email</label><i class="bar"></i>
+                    </div>
+                    <div class="form-group">
+                        <textarea required="required" rows="5"></textarea>
+                        <label for="Message" name="message" class="control-label">Message</label><i class="bar"></i>
+                    </div>
+                </form>
+                <div class="button-container">
+                    <button class="button" type="submit"><span>Submit</span></button>
+                </div>
+            </div>
 
+
+            <!--
             <form method="POST" action="http://formspree.io/edward.stennett@achiive.com">
 
                 <div class="group">
@@ -198,6 +219,7 @@
                 </button>
 
             </form>
+-->
         </div>
 
     </section>
