onclick event added to video

--- a/src/about.html
+++ b/src/about.html
@@ -116,12 +116,11 @@
     <section>
         <div class="wrapper">
             <div class="container">
-                <video class="showreel" id="video1" poster="img/showreel-poster.jpg">
+                <video class="showreel" id="video1" onclick="this.play();" poster="img/showreel-poster.jpg">
                 <source src="img/ackee-showreel.mp4" type="video/mp4"/>
                 <source src="img/ackee-showreel.webm" type="video/webm"/>
                 <source src="img/ackee-showreel.ogg" type="video/ogg"/>
             </video>
-                <a class="video-control js-video-control paused" href="#" data-video="video1"></a>
             </div>
         </div>
     </section>
