Fixed portfolio intro removing float left on skills block

--- a/src/ackee.html
+++ b/src/ackee.html
@@ -85,7 +85,7 @@
                 <h3 class="fade-out">project link</h3>
                 <a href="index.html" target="_blank" class="fade-out"><u>ackeecreative.com</u></a>
             </div>
-            <div class="five columns right-text-intro u-pull-right inline-block">
+            <div class="five columns right-text-intro inline-block">
                 <h3 class="fade-out">skills</h3>
                 <p class="fade-out">XD, Photoshop, Premiere Pro, After Effects, Illustrator, InDesign, HTML, CSS, Javascript</p>
             </div>
