--- a/src/cgm.html
+++ b/src/cgm.html
@@ -85,7 +85,7 @@
                 <h3>project link</h3>
                 <a href="http://www.c-g-m.co.uk/" target="_blank" class="fade-out"><u>cgm.co.uk</u></a>
             </div>
-            <div class="five columns right-text-intro u-pull-right inline-block">
+            <div class="five columns right-text-intro inline-block">
                 <h3 class="fade-out">skills</h3>
                 <p>XD, Photoshop, Illustrator, InDesign, HTML, CSS, Javascript</p>
             </div>
