--- a/src/uwork.html
+++ b/src/uwork.html
@@ -85,7 +85,7 @@
                 <h3 class="fade-out">project link</h3>
                 <a href="http://uwork.co.uk/" target="_blank" class="fade-out"><u>uwork.co.uk</u></a>
             </div>
-            <div class="five columns right-text-intro u-pull-right inline-block">
+            <div class="five columns right-text-intro inline-block">
                 <h3 class="fade-out">skills</h3>
                 <p class="fade-out">XD, Photoshop, Illustrator, InDesign, HTML, CSS, Javascript</p>
             </div>
