SSL removal through htaccess

--- a/src/about.html
+++ b/src/about.html
@@ -82,7 +82,7 @@
         <div class="container small-text-block">
             <div class="six columns left-text-intro">
                 <h3 class="fade-out">about</h3>
-                <p class="fade-out">I am a passionate designer, specialising in UX design and branding.</p>
+                <p class="fade-out">Based in Winchester, Hampshire, I am a passionate designer, specialising in UI design and branding. I have three and a half years agency experience, in addition to work with larger corperations and start ups.</p>
             </div>
         </div>
     </section>
@@ -93,7 +93,7 @@
         <div class="container small-text-block">
             <div class="six columns offset-by-six right-text-intro">
                 <h3 class="fade-out">skills</h3>
-                <p class="fade-out">Day to day I immersed in a design world, with anything from print design through the user expiernece design. In my spare time, I like coding my own designs.</p>
+                <p class="fade-out">Day to day I immersed in a predominantly design world, with anything from print design through to user experience design. In my spare time, I like coding my own designs, having learnt from scratch basic HTML, CSS and Javascript skills.</p>
             </div>
         </div>
     </section>
@@ -103,7 +103,7 @@
         <div class="container text-block">
             <div class="six columns left-text-intro inline-block">
                 <h3 class="fade-out">work</h3>
-                <p class="fade-out">Working as Technical Director, I am immersed in a creative world with notable work ranging from branding for global product launch events to user interface and user experience design for global apps. I have been lucky enough to work with some of largest companies in world.</p>
+                <p class="fade-out">Working as a Technical Director, I am immersed in a creative world with notable work ranging from branding for global product launch events to user interface and user experience design for mobile applicaitons used on a global scale. I have been lucky enough to work with some of largest companies in world.</p>
             </div>
             <div class="six columns right-text-intro inline-block">
                 <h3 class="invisible">clients</h3>
