--- a/src/cgm.html
+++ b/src/cgm.html
@@ -109,7 +109,7 @@
         <div class="container small-text-block">
             <div class="six columns left-text-intro">
                 <h3 class="fade-out">brand</h3>
-                <p class="fade-out">They wanted the logo to stay more or less the same, but wanted to create a set of brand guidelines that would allow them to create a consistent and coherent identity.</p>
+                <p class="fade-out">The brief was to keep the logo more or less the same, but wanted to create a set of brand guidelines that would allow them to create a consistent and coherent identity.</p>
             </div>
         </div>
     </section>
