--- a/src/index.html
+++ b/src/index.html
@@ -84,7 +84,7 @@
         <div class="central-text-intro container">
             <div class="twelve columns">
                 <h3 class="fade-out">ackee is my portfolio</h3>
-                <p class="fade-out">ackee is a site designed to showcase work by me, Ed Stennett, a Winchester based Designer. With around three and a half years agency experience and a strong passion for pixel perfect design and beatiful user experiences, the site showcases my recent projects completed in my spare time.</p>
+                <p class="fade-out">ackee is a site designed to showcase work by me, Ed Stennett, a Winchester based Designer. With around three and a half years agency experience and a strong passion for pixel perfect design and beautiful user interfaces, the site showcases the recent projects completed in my spare time.</p>
                 <hr class="divider">
             </div>
         </div>
@@ -140,7 +140,7 @@
         </div>
     </section>
 
-    <section>
+    <section style="padding-bottom: 200px;">
         <div class="container text-block">
             <div class="six columns left-text-intro inline-block">
                 <h3 class="fade-out">services</h3>
