--- a/src/work.html
+++ b/src/work.html
@@ -141,7 +141,7 @@
                             <span class="caption"> <h3>CGM</h3>
                     <hr class="hr-full-width">
                     <p> Web Design   |   Branding</p></span>
-                            <img src="img/cgm-ipad.jpg" class="img-responsive" alt="young couple smiling from cgm site">
+                            <img src="img/cgm-ipad.jpg" class="img-responsive" alt="iPad with CGM site">
                         </a>
                     </figure>
                 </div>
