--- a/src/ackee.html
+++ b/src/ackee.html
@@ -86,7 +86,7 @@
             </div>
             <div class="five columns right-text-intro inline-block">
                 <h3 class="fade-out">skills</h3>
-                <p class="fade-out">XD, Photoshop, Premiere Pro, After Effects, Illustrator, InDesign, HTML, CSS, Javascript</p>
+                <p class="fade-out">XD, Photoshop, Premiere Pro, After Effects, Illustrator, Sketch, InDesign, HTML, CSS, Javascript</p>
             </div>
         </div>
     </section>
@@ -95,7 +95,7 @@
         <div class="central-text-intro container">
             <div class="twelve columns">
                 <h3 class="fade-out">intro</h3>
-                <p class="fade-out">ackee is a portfolio site for me. It was been designed to showcase my recent projects in simple, yet beautiful way. Rather than use a template or Wordpress theme, I chose to design and handcode the site. This gave me complete design control and allowed me to apply the unique identity throughout.</p>
+                <p class="fade-out">ackee is a portfolio site for me, Ed Stennett. It has been designed to showcase my recent projects in a simple, yet beautiful way. Rather than use a template or Wordpress theme, I chose to design and handcode the site from scratch. This gave me complete design control and allowed me to apply the unique ackee identity throughout.</p>
                 <hr class="divider">
             </div>
         </div>
@@ -122,7 +122,7 @@
         <div class="container text-block">
             <div class="six columns offset-by-six right-text-intro">
                 <h3 class="fade-out">site</h3>
-                <p class="fade-out">This was the first site I have made properly without having to rely on css frameworks like bootstrap or online templates to start me off. The site was handcoded with aim to be as lightweight as possible. It gave me an oppurtunity to play around with gulp and npm and the main focus was to keep file sizes down. It was also the first site I've done that uses an ITCSS structure. with a final main.css file size of 19KB, I feel I've stuck to the initial objective well.</p>
+                <p class="fade-out">This was the first site I have made properly without having to rely on css frameworks like bootstrap or online templates to start me off. The site was handcoded with aim to be as lightweight as possible. It gave me an oppurtunity to play around with gulp and npm and the main focus was to keep file sizes down. It was also the first site I've done that uses an ITCSS structure. With a final main.css file size of 41KB, I feel I've stuck to the initial objective well.</p>
             </div>
         </div>
     </section>
@@ -136,7 +136,7 @@
         <div class="container small-text-block">
             <div class="six columns left-text-intro">
                 <h3 class="fade-out">build</h3>
-                <p class="fade-out">UX is big part of everything I do, and even though this is a 'static' site, very subtle parallax effects through out gives a user a desire to scroll through the page. I looked to spend time at the end, fine tuning the details to make it a truly postitive user experience.</p>
+                <p class="fade-out">Beautiful UI design is big part of everything I do, and even though this is a 'static' site, very subtle parallax effects through out gives a user a desire to scroll through the page. I looked to spend time at the end, fine tuning the details to make it a truly postitive user experience.</p>
             </div>
         </div>
     </section>
