--- a/src/uwork.html
+++ b/src/uwork.html
@@ -95,7 +95,7 @@
         <div class="central-text-intro container">
             <div class="twelve columns">
                 <h3 class="fade-out">intro</h3>
-                <p class="fade-out">uWork is the biggest personal project I have taken on. As a start up with big aspirations, it gave me invaluable start up experience. Working as the chief design officer in my spare evenings and weekends, I responsible for creating and maintaining the brand, UI and UX design and print design.</p>
+                <p class="fade-out">uWork is the biggest personal project I have taken on. As a start up with big aspirations, it gave me invaluable start up experience working with other designers and developers. Working as the chief design officer in my spare evenings and weekends, I responsible for creating and maintaining the brand, UI and UX design and print design for the company.</p>
                 <hr class="divider">
             </div>
         </div>
@@ -109,7 +109,7 @@
         <div class="container small-text-block">
             <div class="six columns left-text-intro">
                 <h3 class="fade-out">brand</h3>
-                <p class="fade-out">The first step was to create a strong brand for uWork. I designed a logo and create a set of comprehensive brand guidelines that acted as a starting point for the site itself.</p>
+                <p class="fade-out">The first step was to create a strong brand for uWork. I designed a logo and created a set of comprehensive brand guidelines that acted as a starting point for the site itself.</p>
             </div>
         </div>
     </section>
@@ -122,7 +122,7 @@
         <div class="container small-text-block">
             <div class="six columns offset-by-six right-text-intro">
                 <h3 class="fade-out">UI / UX design</h3>
-                <p class="fade-out">As a task site aimed at students, the UI and UX for the site and app is critical to uWork's success. Using adobe's new XD applicaiton, a fully designed wireframe is in the process of being created.</p>
+                <p class="fade-out">As a task site aimed at students, the UI and UX for the site and app is critical to uWork's success. Using adobe's new XD applicaiton, a fully designed wireframe is in the process of being created in addition to a supporting UI kit.</p>
             </div>
         </div>
     </section>
